--- a/style.css
+++ b/style.css
@@ -147,10 +147,10 @@ html {
 	display: inline-block;
 }
 .contenedor_tarjeta:hover figure {
-  -webkit-transform: perspective(600px) rotateY(180deg);
-  -ms-transform: perspective(600px) rotateY(180deg);
-  -o-transform: perspective(600px) rotateY(180deg);
-  transform: perspective(600px) rotateY(180deg);
+  -webkit-transform: perspective(500px) rotateY(180deg);
+  -ms-transform: perspective(500px) rotateY(180deg);
+  -o-transform: perspective(500px) rotateY(180deg);
+  transform: perspective(500px) rotateY(180deg);
   -webkit-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.25);
   -moz-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.25);
   box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.25);
@@ -172,7 +172,7 @@ figure {
 	position: relative;
 	transition: all ease .7s;
 	transform-style: preserve-3d;
-	transform: perspective(600px) rotateY(0deg);
+	transform: perspective(500px) rotateY(0deg);
 }
 figure .frontal {
 	display: block;
@@ -237,3 +237,57 @@ figure .atras p {
 	font-size: 16px;
 }
 
+button {
+	padding: 15px 15px;
+	font-size: 22px;
+	line-height: 40px;
+	min-width: 100px;
+	text-align: center;
+	cursor: pointer;
+	background-image: linear-gradient(to right, #a8caba 0%, #5d4157 100%);
+	color: #fff;
+	border-radius: 50%;
+	border:0px;
+	height: 100px;
+	opacity: .6;
+	outline: none;
+}
+button::before {
+	position: absolute;
+	left: 2px;
+	top: 2px;
+	width: 70px;
+	height: 70px;
+	border:2px solid #fff;
+	content: "";
+	border-radius: 50%;
+	animation: one 2s infinite;
+	transition: .4s;
+}
+button::after {
+	position: absolute;
+	left: -12px;
+	top: -12px;
+	width: 90px;
+	height: 90px;
+	border:1px solid #fff;
+	content: "";
+	border-radius: 50%;
+	animation: two 2s infinite;
+}
+@keyframes one{
+	0%{
+		transform: scale(0);
+	}
+	100%{
+		transform: scale(1.2);
+	}
+}
+@keyframes two{
+	0%{
+		transform: scale(0);
+	}
+	100%{
+		transform: scale(1.2);
+	}
+}
