--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ figure .atras p {
 	line-height: 22px;
 	font-size: 16px;
 }
-
+/*Button Audio Inicio*/
 button {
 	padding: 15px 15px;
 	font-size: 22px;
