--- a/nav.css
+++ b/nav.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
+* {
+  margin:  0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
+}
+.hamdivstyle {
+    background-color: #111;
+}
 body {
   overflow-x: hidden;
+
 }
 nav {
   height: 4rem;
@@ -77,7 +91,7 @@ nav {
 .hamburger {
   display: none;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   nav {
     position: fixed;
     z-index: 3;
@@ -95,10 +109,11 @@ nav {
     z-index: 2;
     transition: all 0.7s ease;
   }
+  /* colorDeRespon */
   .nav-links {
     position: fixed;
-    background: #927D4E;
-    opacity: 0.9;
+    background: #8a8898; 
+    opacity: 0.7;
     height: 100vh;
     width: 100%;
     flex-direction: column;
@@ -148,12 +163,8 @@ nav {
   li.fade {
     opacity: 1;
   }
-  .perfil img {
-    width: 100%;
-  }
-  .perfil div p {
-    width: 100%;
-  }
+  
+  
 
 }
 /*Animating Hamburger Icon on Click*/
@@ -168,105 +179,7 @@ nav {
   transform: rotate(45deg) translate(-5px, -6px);
 }
 /*SliderShow Publicidad*/
-.periodico{
-  background: url(img/periodico.jpg);
-  padding: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slider{
-  width: 800px;
-  height: 500px;
-  border-radius: 10px;
-  overflow: hidden;
-}
-.slides{
-  width: 500%;
-  height: 500px;
-  display: flex;
-}
-.slides input{
-  display: none;
-}
 
-.slide{
-  width: 20%;
-  transition: 2s;
-}
-.slide img{
-  width: 800px;
-  height: 500px;
-}
-/*css for manual slide navigation*/
-.navigation-manual{
-  position: absolute;
-  width: 800px;
-  margin-top: -40px;
-  display: flex;
-  justify-content: center;
-}
-.manual-btn{
-  border: 2px solid #fff;
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 1s;
-}
-.manual-btn:not(:last-child){
-  margin-right: 40px;
-}
-.manual-btn:hover{
-  background: #fff;
-}
-#radio1:checked ~ .first{
-  margin-left: 0%;
-}
-#radio2:checked ~ .first{
-  margin-left: -20%;
-}
-#radio3:checked ~ .first{
-  margin-left: -40%;
-}
-#radio4:checked ~ .first{
-  margin-left: -60%;
-}
-#radio5:checked ~ .first{
-  margin-left: -80%;
-}
-/*css for automatic navigation*/
-.navigation-auto{
-  position: absolute;
-  display: flex;
-  width: 800px;
-  justify-content: center;
-  margin-top: 460px;
-}
-.navigation-auto div{
-  border: 2px solid #fff;
-  padding: 5px;
-  border-radius: 10px;
-  transition: 0.5s;
-}
-.navigation-auto div:not(:last-child){
-  margin-right: 40px;
-}
-#radio1:checked ~ .navigation-auto .auto-btn1{
-  background: #fff;
-}
-#radio2:checked ~ .navigation-auto .auto-btn2{
-  background: #fff;
-}
-#radio3:checked ~ .navigation-auto .auto-btn3{
-  background: #fff;
-}
-#radio4:checked ~ .navigation-auto .auto-btn4{
-  background: #fff;
-}
-#radio5:checked ~ .navigation-auto .auto-btn5{
-  background: #fff;
-}
 /*footer */
 footer {
   background-color: #000;
@@ -324,3 +237,516 @@ footer .contenedor-icono:hover a {
     display: none;
   }
 }
+
+/* Cards */
+.home {
+  background: url(img/microBlanco.jpg);
+  background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+  width: 100%;
+	height: 100%;
+  background-size: cover;
+  min-height: 100vh;
+}
+.home:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0,6);
+  opacity: 0.3;
+}
+
+
+.home div h4 {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	text-align: justify;
+	top: 300px;
+	color: #fff;
+}
+.perfil {
+	width: 100%;
+	height: 100%;
+	background: url(img/FondoPerfil.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+  padding: 40px;
+}
+.perfilOne img {
+	width: 30%;
+	height: 30%;
+	border-radius: 50%;
+	padding: 50px;
+}
+
+.perfil .perfil-texto p {
+	width: 600px;
+	height: 130px;
+	color: #fff;
+	text-align: justify;
+	font-size: 20px;
+	padding: 20px;
+}
+.perfil a {
+	font-family: consolas;
+	position: relative;
+	display: inline-block;
+	padding: 15px 30px;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	text-decoration: none;
+	font-size: 24px;
+	overflow: hidden;
+	transition: 0.2s;
+}
+.perfil a:hover {
+	color: #fff;
+	background: #CA7715;
+	box-shadow: 0 0 10px #CA7715, 0 0 40px #CA7715, 0 0 80px #CA7715;
+	transition-delay: 1s;
+}
+.perfil a span {
+	position: absolute;
+	display: block;
+}
+.perfil a span:nth-child(1){
+	top: 0;
+	left: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(90deg,transparent,#2196f3)
+}
+.perfil a:hover span:nth-child(1){
+	left: 100%;
+	transition: 1s;
+}
+.perfil a span:nth-child(3){
+	bottom: 0;
+	right: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(270deg,transparent,#2196f3)
+}
+.perfil a:hover span:nth-child(3){
+	right: 100%;
+	transition: 1s;
+	transition-delay: 0.5s;
+}
+.perfil a span:nth-child(2){
+	top: -100%;
+	right:  0%;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(180deg,transparent,#2196f3)
+}
+.perfil a:hover span:nth-child(2){
+	top: 100%;
+	transition: 1s;
+	transition-delay: 0.25s;
+}
+.perfil a span:nth-child(4){
+	bottom: -100%;
+	left: 0%;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(360deg,transparent,#2196f3)
+}
+.perfil a:hover span:nth-child(4){
+	bottom: 100%;
+	transition: 1s;
+	transition-delay: 0.75s;
+}
+/* video <div class="video">
+			<video loading="lazy" src="img/video.mp4" autoplay muted loop></video>
+		</div> */
+.video {
+	position: absolute;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
+.contenedor {
+  max-width: 1200px;
+  padding-top: 70px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.contenedor h2, h5{
+	font-family: 'Roboto', sans-serif;
+	position: sticky;
+	bottom: 10px;
+	color: #FFF;
+}
+
+/*Button Audio Inicio*/
+button {
+	padding: 15px 15px;
+	font-size: 22px;
+	line-height: 40px;
+	min-width: 100px;
+	text-align: center;
+	cursor: pointer;
+	background-image: linear-gradient(to right, #a8caba 0%, #5d4157 100%);
+	color: #fff;
+	border-radius: 50%;
+	border:0px;
+	height: 100px;
+	opacity: .6;
+	outline: none;
+}
+button::before {
+	position: absolute;
+	left: 2px;
+	top: 2px;
+	width: 70px;
+	height: 70px;
+	border:2px solid #fff;
+	content: "";
+	border-radius: 50%;
+	animation: one 2s infinite;
+	transition: .4s;
+}
+button::after {
+	position: absolute;
+	left: -12px;
+	top: -12px;
+	width: 90px;
+	height: 90px;
+	border:1px solid #fff;
+	content: "";
+	border-radius: 50%;
+	animation: two 2s infinite;
+}
+@keyframes one{
+	0%{
+		transform: scale(0);
+	}
+	100%{
+		transform: scale(1.2);
+	}
+}
+@keyframes two{
+	0%{
+		transform: scale(0);
+	}
+	100%{
+		transform: scale(1.2);
+	}
+}
+
+/* New cards */
+.thecontainer {
+  position: relative;
+  
+  display: flex;
+  justify-content:space-between;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+.thecontainer .card{
+  position: relative;
+  height: 250px;
+  background-color: #fff;
+  display: flex;
+  width: 45%;
+  margin: 30px 0;
+}
+
+.thecontainer .card .imgBx{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #3D7EAA;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #FFE47A, #3D7EAA);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #FFE47A, #3D7EAA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+  z-index: 1;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
+  border-radius:10px;
+
+}
+.thecontainer .card:hover .imgBx{
+  width: 200px;
+  height: 200px;
+  left: -75px;
+  top: calc(50% - 75px);
+  transition: 0.5s ease-in-out;
+  background: #43cea2;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #185a9d, #43cea2);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #185a9d, #43cea2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+}
+
+.thecontainer .card .imgBx:before{
+  content: attr(data-text);
+  position: absolute;
+  bottom: 0;
+  left:0;
+  width: 100%;
+
+  text-align: center;
+  font-size: 6em;
+  color: rgba(255,255,255,0.5);
+  font-weight:700;
+
+}
+
+.thecontainer .card .imgBx img {
+  max-width: 200px;
+  transition: 0.5s ease-in-out;
+  border-radius:10%;
+}
+.thecontainer .card:hover .imgBx img {
+  max-width: 75px;
+  content: none;
+}
+.thecontainer .card .thecontent {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  padding: 20px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background: #00bf8f;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #001510, #00bf8f);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #001510, #00bf8f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border-radius:10px;
+
+}
+.thecontainer .card .thecontent h3 {
+  margin-bottom:5px;
+  font-size:24px;
+}
+.thecontainer .card .thecontent a {
+  display: inline-block;
+  margin-top: 10px;
+  padding:5px 10px;
+  background: #333;
+  text-decoration: none;
+  color: #fff;
+}
+
+.card .imgBx .bx {
+ 
+  color: #fff;
+  font-size:40px;
+}
+
+@media (max-width:992px) {
+  .thecontainer{
+    
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+  .thecontainer .card {
+    width:400px;
+  }
+  @media (max-width: 768px){
+    .carrusel {
+      overflow: hidden;
+    }
+ 
+  }
+}
+
+.fondo_tarjetas {
+  background:#000;
+  padding:0;
+  margin:0;
+}
+
+@media (max-width: 768px){
+  .thecontainer .card{
+    max-width:300px;
+    flex-direction: column;
+    height:auto;
+  }
+  .thecontainer .card .imgBx{
+    position: relative;
+  }
+  .thecontainer .card .imgBx,
+  .thecontainer .card:hover .imgBx{
+    width: 100%;
+    height: 200px;
+    left: 0;
+  }
+  .thecontainer .card .imgBx img,
+  .thecontainer .card:hover .imgBx img{
+    max-width: 100px;
+  }
+  .thecontainer .card .thecontent{
+    position: relative;
+    width: 100%;
+  }
+
+  @media (max-width: 768px){
+    .carrusel {
+      overflow: hidden;
+    }
+ 
+  }
+}
+
+
+@media (max-width: 768px){
+  .perfil .perfil-texto p {
+    height: 100px;
+    width: 100%;
+  }
+}
+
+.mejor{
+  background-color: #fff;
+}
+
+
+.carrusel{
+  height:250px;
+  margin: auto;
+  position: relative;
+  width: 90%;
+  display: grid;
+  place-items: center;
+  
+}
+.carrusel-track {
+  display:flex;
+  width:calc(250px * 8);
+  animation: scroll 40s linear infinite;
+}
+
+.carrusel-track:hover {
+  animation-play-state: paused;
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-250px * 4))
+  }
+}
+
+.carrusel-slide {
+  height:200px;
+  width:250px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  perspective:100px;
+}
+
+.carrusel-slide img {
+  width: 100%;
+  transition: transform 1s;
+}
+.carrusel-slide img:hover {
+  transform: translateZ(20px)
+}
+
+
+.carrusel::before {
+  left: 0;
+  top: 0;
+}
+
+.carrusel::after {
+  right: 0;
+  top: 0;
+  transition: rotateZ(180deg)
+}
+
+/* campeonato */
+/* From uiverse.io by @adamgiebl */
+.boton-campeonato {
+  display: flex;
+  
+  justify-content:center;
+  align-items: center;
+  align-content: center;
+  padding:20px;
+}
+
+/* From uiverse.io by @adamgiebl */
+.cssbuttons-io-button {
+  background: #A370F0;
+  color: white;
+  font-family: inherit;
+  padding: 0.35em;
+  padding-left: 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em #714da6;
+  overflow: hidden;
+  position: relative;
+  height: 2.8em;
+  padding-right: 3.3em;
+ }
+ 
+ .cssbuttons-io-button .icon {
+  background: white;
+  margin-left: 1em;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+  right: 0.3em;
+  transition: all 0.3s;
+ }
+ 
+ .cssbuttons-io-button:hover .icon {
+  width: calc(100% - 0.6em);
+ }
+ 
+ .cssbuttons-io-button .icon svg {
+  width: 1.1em;
+  transition: transform 0.3s;
+  color: #7b52b9;
+ }
+ 
+ .cssbuttons-io-button:hover .icon svg {
+  transform: translateX(0.1em);
+ }
+ 
+ .cssbuttons-io-button:active .icon {
+  transform: scale(0.95);
+ }
+
+ .cssbuttons-io-button .bx-football{
+   color: #000;
+ }
+
+ 
